--- a/src/app/pages/state-machine-page/state-machine-live/state-machine-live.component.html
+++ b/src/app/pages/state-machine-page/state-machine-live/state-machine-live.component.html
@@ -1,3 +1,9 @@
-<div>
-  Live {{queueName}} Queue!
+<div class="state-machine-live__details">
+  <state-machine-details
+    [queue]="queue"
+    [timeseries]="timeseries"
+    [showPolling]="true"
+    [isPolling]="polling"
+    (togglePolling)="$event ? startPolling() : pausePolling()">
+  </state-machine-details>
 </div>
