--- a/src/app/pages/state-machine-page/state-machine-dashboard/state-machine-status/state-machine-status.component.html
+++ b/src/app/pages/state-machine-page/state-machine-dashboard/state-machine-status/state-machine-status.component.html
@@ -1,5 +1,5 @@
 <div class="status__container">
-  <div class="status__item__container" *ngFor="let item of items">
-    <state-machine-status-item [item]="item"></state-machine-status-item>
+  <div class="status__item__container" *ngFor="let item of queues">
+    <state-machine-status-item [queue]="item"></state-machine-status-item>
   </div>
 </div>
