--- a/src/styles.scss
+++ b/src/styles.scss
@@ -27,6 +27,7 @@
 @import "assets/scss/_buttons.scss";
 @import "assets/scss/_registration.scss";
 @import "assets/scss/_login.scss";
+@import "assets/scss/_charts.scss";
 
 /***************
   HTML Styles
