--- a/src/app/shared/components/simple-dropdown/simple-dropdown.component.html
+++ b/src/app/shared/components/simple-dropdown/simple-dropdown.component.html
@@ -1,4 +1,4 @@
-<div class="simple-dropdown">
+<div class="simple-dropdown" [class.simple-dropdown--small]="small">
 
   <div class="simple-dropdown" [class.simple-dropdown--active]="dropdownVisible">
     <div class="simple-dropdown__header" [class.simple-dropdown__header--active]="dropdownVisible" (click)="toggleDropdown()">
