--- a/src/app/authentication/terms-and-conditions/terms-and-conditions.component.scss
+++ b/src/app/authentication/terms-and-conditions/terms-and-conditions.component.scss
@@ -2,21 +2,11 @@
 
   &__container {
     position: absolute;
-    display: block;
-    height: 100vh;
-    width: 100vw;
-    background: rgba(0,0,0,0.2);
-  }
-
-  &__modal {
-    position: relative;
-    margin: 10px auto auto;
-    max-width: 1000px;
-    padding-top: 30px;
+    min-width: 100vw;
+    min-height: 100vh;
     background: linear-gradient(to bottom right, #067AE9, #0938C6);
     text-align: center;
     font-family: 'Montserrat', sans-serif;
-    box-shadow: 0 0 25px rgba(0,0,0,0.3);
   }
 
   &__acl-dropdown {
@@ -30,9 +20,14 @@
 
   &__header {
     position: relative;
-    margin: 40px auto 20px;
-    max-width: 400px;
+    margin: 100px auto 20px;
+    max-width: 720px;
+    height: 130px;
     width: 100%;
+
+    @media only screen and (max-width: 600px) {
+      height: 96px;
+    }
 
     &__logo {
       position: absolute;
@@ -42,8 +37,47 @@
       height: 100px;
     }
 
-    &__clouds {
-      width: 100%;
+    &__cloud {
+      position: absolute;
+
+      @media only screen and (max-width: 450px) {
+        display: none;
+      }
+
+      &--one {
+        left: 0;
+
+        @media only screen and (max-width: 600px) {
+          width: 130px;
+        }
+      }
+
+      &--two {
+        left: 25px;
+        top: 20px;
+
+        @media only screen and (max-width: 600px) {
+          width: 150px;
+        }
+      }
+
+      &--three {
+        right: 0;
+        top: 16px;
+
+        @media only screen and (max-width: 600px) {
+          width: 130px;
+        }
+      }
+
+      &--four {
+        right: 20px;
+        top: 30px;
+
+        @media only screen and (max-width: 600px) {
+          width: 150px;
+        }
+      }
     }
 
   }
@@ -51,13 +85,18 @@
   &__body {
     margin: 0 auto 20px;
     width: 100%;
-    max-width: 520px;
+    max-width: 720px;
     color: white;
   }
 
   &__title {
-    margin-bottom: 20px;
+    margin: 40px 0;
+    font-size: 25px;
     font-weight: 500;
+
+    @media only screen and (max-width: 600px) {
+      font-size: 20px;
+    }
   }
 
   &__content {
@@ -69,32 +108,45 @@
     &__title {
       height: 20px;
       padding: 10px;
-      font-size: 15px;
+      font-size: 18px;
       font-weight: 500;
+
+      @media only screen and (max-width: 600px) {
+        font-size: 14px;
+      }
     }
 
     &__body {
       padding: 10px;
       overflow: auto;
-      height: 200px;
-      font-size: 10px;
+      height: 240px;
+      font-size: 14px;
+      font-weight: 300;
+
+      @media only screen and (max-width: 600px) {
+        font-size: 12px;
+      }
     }
   }
 
   &__button {
     display: inline-block;
     margin: 25px 0 5px;
-    width: 90px;
+    width: 120px;
     padding: 8px;
     background: #F57C00;
-    font-size: 12px;
+    font-size: 18px;
     font-weight: 500;
     cursor: pointer;
+
+    @media only screen and (max-width: 600px) {
+      font-size: 16px;
+    }
 
     &--cancel {
       display: inline-block;
       margin: 0 0 25px;
-      font-size: 12px;
+      font-size: 14px;
       font-weight: 500;
       cursor: pointer;
       color: #E6AB4C;
