--- a/src/app/shared/components/simple-dropdown/simple-dropdown.component.scss
+++ b/src/app/shared/components/simple-dropdown/simple-dropdown.component.scss
@@ -4,6 +4,27 @@
   cursor: pointer;
   transition: background, box-shadow 0.25s ease-in-out;
 
+  &--small {
+    height: 50px;
+
+    .simple-dropdown {
+      height: 50px;
+    }
+
+    .simple-dropdown__header {
+      height: 50px;
+    }
+
+    .simple-dropdown__menu {
+      top: 50px;
+    }
+
+    .simple-dropdown__header__arrow {
+      margin-left: auto;
+    }
+
+  }
+
   &--active {
     background: #F7F7F7;
     box-shadow: 0 0 25px rgba(0, 0, 0, 0.25);
