--- a/src/app/authentication/invite-accept/invite-accept.component.scss
+++ b/src/app/authentication/invite-accept/invite-accept.component.scss
@@ -8,6 +8,17 @@
     height: 455px;
     display: flex;
     flex-direction: column;
+
+    @media only screen and (max-width: 350px) {
+      margin: 0;
+      width: 100%;
+      max-width: 100%;
+      overflow: hidden;
+    }
+
+    &--instructions {
+      height: 540px;
+    }
   }
 
   &__button {
@@ -26,8 +37,148 @@
 .title {
   padding: 10px 20px 0;
   font-size: 16px;
+  line-height: 21px;
 }
 .subtitle {
   margin-top: 45px;
   font-size: 14px;
+}
+
+.instructions {
+  font-size: 13px;
+  font-family: Roboto, sans-serif;
+  cursor: default;
+
+  &__header {
+    display: flex;
+    align-items: center;
+    background: white;
+    color: #4A4A4A;
+    height: 40px;
+  }
+
+  &__menu {
+    position: relative;
+    top: 40px;
+    margin-left: 8px;
+    background: white;
+    box-shadow: 0 3px 12px rgba(0,0,0,0.4);
+    width: 132px;
+    text-align: left;
+
+    &__item {
+      display: flex;
+      align-items: center;
+      height: 40px;
+
+      span {
+        margin-left: 5px;
+      }
+    }
+    &__first {
+      display: flex;
+      align-items: center;
+      background: #F7F7F7;
+
+      span {
+        margin-left: 5px;
+      }
+
+      .key {
+        margin: 0 2px 0 auto;
+        width: 18px;
+        height: 18px;
+        font-size: 18px;
+      }
+    }
+
+    .domain {
+      margin-left: 5px;
+      font-size: 20px;
+      height: 20px;
+      width: 20px;
+
+      &--blue {
+        color: #8F9ADC;
+      }
+
+      &--green {
+        color: #93A721;
+      }
+
+      &--orange {
+        color: #F5AF69;
+      }
+    }
+  }
+
+  &__profile {
+    display: flex;
+    align-items: center;
+    margin: 0 auto;
+
+    img {
+      margin-right: 4px;
+      width: 25px;
+      height: 25px;
+      border-radius: 50%;
+    }
+
+    .key {
+      margin: 0 2px 0 auto;
+      width: 18px;
+      height: 18px;
+      font-size: 18px;
+    }
+  }
+
+  &__notifications {
+    position: relative;
+    margin: 0 8px 0 0;;
+
+    md-icon {
+      color: #9b9a9b;
+    }
+
+    &__count {
+      position: absolute;
+      top: -4px;
+      right: -4px;
+      border-radius: 50%;
+      background: #fe7274;
+      height: 18px;
+      width: 18px;
+      line-height: 19px;
+      text-align: center;
+      font-weight: 600;
+      font-size: 11px;
+      color: #fff;
+    }
+  }
+
+  &__content {
+    height: 200px;
+    background: #D9D9D9;
+
+    &__box {
+      position: relative;
+      top: 100px;
+      margin: 0 10px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.2);
+      background: white;
+      padding: 10px;
+      text-align: left;
+      color: #4A4A4A;
+
+      .point {
+        position: absolute;
+        top: -7px;
+        left: 50px;
+        height: 14px;
+        width: 14px;
+        transform: rotate(45deg);
+        background: white;
+      }
+    }
+  }
 }
