--- a/src/assets/scss/_registration.scss
+++ b/src/assets/scss/_registration.scss
@@ -8,6 +8,10 @@
   font-family: 'Montserrat', sans-serif;
   box-shadow: 0 0 25px rgba(0,0,0,0.6);
 
+  @media only screen and (max-width: 600px) {
+    margin-top: 10px;
+  }
+
   &__header {
     &__logo {
       position: absolute;
