--- a/src/app/pages/state-machine-page/state-machine-dashboard/state-machine-dashboard.component.scss
+++ b/src/app/pages/state-machine-page/state-machine-dashboard/state-machine-dashboard.component.scss
@@ -11,16 +11,16 @@ advanced-filter {
 }
 
 state-machine-schema {
-  margin: 10px 10px 10px 15px;
+  margin: 15px 10px 0 15px;
   width: 50%;
 }
 
 state-machine-status {
-  margin: 10px 10px 10px 15px;
+  margin: 15px 5px 0 10px;
   width: 50%;
 }
 
 state-machine-details {
   display: block;
-  padding: 15px;
+  padding: 5px 15px 15px;
 }
