--- a/src/app/pages/state-machine-page/state-machine-dashboard/state-machine-details/state-machine-details.component.scss
+++ b/src/app/pages/state-machine-page/state-machine-dashboard/state-machine-details/state-machine-details.component.scss
@@ -60,7 +60,7 @@
       line-height: 24px;
     }
 
-    &__view-live {
+    &__button {
       display: inline-block;
       margin-top: 15px;
       padding: 8px 20px;
@@ -69,6 +69,20 @@
       color: white;
       font-size: 14px;
       box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.12), 0 2px 2px 0 rgba(0, 0, 0, 0.24);
+
+      &--downstream {
+        width: 120px;
+      }
+    }
+
+    &__downstream {
+      display: flex;
+      flex-direction: column;
+      margin-top: 30px;
+
+      &__text {
+        font-size: 16px;
+      }
     }
   }
 
@@ -78,15 +92,13 @@
   }
 
   &__polling {
-    margin-top: 15px;
+    margin-top: 20px;
     display: flex;
     align-items: center;
     cursor: pointer;
 
     md-icon {
       margin-right: 8px;
-      border: 2px solid #F2751C;
-      border-radius: 50%;
       height: 38px;
       width: 38px;
       color: #F2751C;
@@ -98,4 +110,10 @@
       font-size: 18px;
     }
   }
+}
+
+advanced-filter {
+  display: block;
+  margin-bottom: 5px;
+  text-align: right;
 }
