--- a/src/app/pages/state-machine-page/state-machine-dashboard/state-machine-schema/state-machine-schema.component.scss
+++ b/src/app/pages/state-machine-page/state-machine-dashboard/state-machine-schema/state-machine-schema.component.scss
@@ -27,6 +27,7 @@
     font-size: 14px;
     cursor: pointer;
     transition: background 150ms;
+    text-transform: uppercase;
 
     &--focused {
       background: #5B9BE1;
