--- a/src/app/pages/state-machine-page/state-machine-dashboard/state-machine-status/state-machine-status-item/state-machine-status-item.component.scss
+++ b/src/app/pages/state-machine-page/state-machine-dashboard/state-machine-status/state-machine-status-item/state-machine-status-item.component.scss
@@ -23,6 +23,7 @@
       margin-top: 5px;
       font-size: 14px;
       color: rgba(0,0,0,0.5);
+      text-transform: capitalize;
     }
 
     &__view-link {
