--- a/src/assets/scss/_advanced-filter.scss
+++ b/src/assets/scss/_advanced-filter.scss
@@ -6,6 +6,12 @@ $color-orange: #F16C00;
   padding-top: 5px;
   background: white;
 
+  &--embedded {
+    box-shadow: none;
+    padding: 0;
+    display: inline-block;
+  }
+
   &__content {
     position: relative;
     display: flex;
@@ -21,11 +27,6 @@ $color-orange: #F16C00;
 
     @media only screen and (max-width: 1440px) {
       margin: 10px 20px 10px 0;
-    }
-
-    &--only {
-      margin-left: auto;
-      margin-right: 25px;
     }
 
     &__quick {
