--- a/src/app/pages/state-machine-page/state-machine-live/state-machine-live.component.scss
+++ b/src/app/pages/state-machine-page/state-machine-live/state-machine-live.component.scss
@@ -30,7 +30,21 @@
   }
 }
 
+
+.table-container {
+  display: block;
+  position: relative;
+}
+
 table-memory {
   display: block;
   margin: -10px;
+}
+
+state-machine-message {
+  display: block;
+  position: absolute;
+  top: 100px;
+  left: 50%;
+  transform: translateX(-50%);
 }
