Fix 'Log Out' capitalization

--- a/src/app/authentication/terms-and-conditions/terms-and-conditions.component.html
+++ b/src/app/authentication/terms-and-conditions/terms-and-conditions.component.html
@@ -33,7 +33,7 @@
     <div class="terms-and-conditions__button" (click)="acceptTermsAndConditions()">Accept</div>
 
     <div>
-      <div class="terms-and-conditions__button--cancel" (click)="logout()">Log out</div>
+      <div class="terms-and-conditions__button--cancel" (click)="logout()">Log Out</div>
     </div>
 
   </div>
