--- a/src/app/authentication/invite-accept/invite-accept.component.html
+++ b/src/app/authentication/invite-accept/invite-accept.component.html
@@ -12,7 +12,7 @@
       </div>
 
       <div class="registration-form__button registration-form__button--no-margin accept-invite__button" (click)="goToLogin()">Log In</div>
-      <div class="registration-form__button--cancel" (click)="logout()">Log out</div>
+      <div class="registration-form__button--cancel" (click)="logout()">Log Out</div>
     </ng-container>
 
     <ng-container *ngIf="welcomeScreen">
@@ -24,7 +24,7 @@
       </div>
 
       <div class="registration-form__button registration-form__button--no-margin accept-invite__button--small-margin" (click)="acceptInvite()">Accept</div>
-      <div class="registration-form__button--cancel" (click)="logout()">Log out</div>
+      <div class="registration-form__button--cancel" (click)="logout()">Log Out</div>
     </ng-container>
 
     <ng-container *ngIf="infoScreen">
