Fix padings on accept

--- a/src/app/authentication/invite-accept/invite-accept.component.html
+++ b/src/app/authentication/invite-accept/invite-accept.component.html
@@ -53,7 +53,7 @@
     </ng-container>
 
     <ng-container *ngIf="completeScreen">
-      <div style="margin: auto;" class="title">
+      <div style="margin: auto;" class="title title--final">
         Great!  We've added you to the account.
       </div>
 
