--- a/src/app/authentication/invite-accept/invite-accept.component.scss
+++ b/src/app/authentication/invite-accept/invite-accept.component.scss
@@ -38,6 +38,10 @@
   padding: 10px 20px 0;
   font-size: 16px;
   line-height: 21px;
+
+  &--final {
+    padding: 10px;
+  }
 }
 .subtitle {
   margin-top: 45px;
