--- a/src/app/authentication/terms-and-conditions/terms-and-conditions.component.scss
+++ b/src/app/authentication/terms-and-conditions/terms-and-conditions.component.scss
@@ -117,7 +117,7 @@
     }
 
     &__body {
-      padding: 10px;
+      padding: 0 10px 10px;
       overflow: auto;
       height: 240px;
       font-size: 14px;
