Add rebill details on state machine page

--- a/src/app/pages/state-machine-page/state-machine-live/state-machine-live.component.html
+++ b/src/app/pages/state-machine-page/state-machine-live/state-machine-live.component.html
@@ -15,17 +15,22 @@
     (togglePolling)="$event ? startPolling() : pausePolling()">
   </state-machine-details>
 
+  <div class="state-machine-live__breadcrumb state-machine-live__breadcrumb--separator">
+    <div class="root" [class.root--active]="!rebill" (click)="hideMessage()">Queue Messages</div>
+    <md-icon *ngIf="rebill">keyboard_arrow_right</md-icon>
+    <div *ngIf="rebill" class="queue"> Rebill ID: {{rebill.id}}</div>
+  </div>
+
   <div class="table-container">
-    <table-memory [title]="'Bill Queue Messages'"
+    <table-memory *ngIf="!rebill"
+                  [title]="'Bill Queue Messages'"
+                  [showHeader]="false"
                   [data]="messages"
                   [columnParams]="messageColumnParams"
-                  [filterEnabled]="false"
                   [dissociationEnabled]="false"
-                  [associationEnabled]="false"
                   [textOptions]="tableTextOptions"
                   (view)="viewMessage($event)">
     </table-memory>
-
-    <state-machine-message *ngIf="showMessage" [message]="messageToShow" (close)="hideMessage()"></state-machine-message>
+    <state-machine-rebill *ngIf="rebill" [rebill]="rebill"></state-machine-rebill>
   </div>
 </div>
