--- a/src/app/pages/state-machine-page/state-machine-live/state-machine-live.component.scss
+++ b/src/app/pages/state-machine-page/state-machine-live/state-machine-live.component.scss
@@ -2,13 +2,31 @@
   &__breadcrumb {
     display: flex;
     align-items: center;
-    padding: 15px 50px;
+    padding: 15px 30px;
     border-bottom: 1px solid rgba(0,0,0,0.1);
     font-size: 16px;
+
+    &--separator {
+      margin: 15px -25px;
+      background: #F3F3F3;
+      font-size: 14px;
+      border-top: 1px solid rgba(0,0,0,0.1);
+      border-bottom: 1px solid rgba(0,0,0,0.1);
+
+      md-icon {
+        height: 18px !important;
+        width: 18px !important;
+        font-size: 18px !important;
+      }
+    }
 
     .root {
       color: rgba(0,0,0,0.4);
       cursor: pointer;
+
+      &--active {
+        color: rgba(0, 0, 0, 0.87);
+      }
     }
 
     md-icon {
@@ -30,7 +48,6 @@
   }
 }
 
-
 .table-container {
   display: block;
   position: relative;
@@ -38,7 +55,7 @@
 
 table-memory {
   display: block;
-  margin: -10px;
+  margin: 0 -10px;
 }
 
 state-machine-message {
