--- a/src/app/shared/components/customer-credit-card-view/customer-credit-card-view.component.html
+++ b/src/app/shared/components/customer-credit-card-view/customer-credit-card-view.component.html
@@ -71,7 +71,7 @@
         <input disabled md-input placeholder="Type" [(ngModel)]="creditCards[0].type">
       </md-input-container>
       <md-input-container [class.small]="ripped">
-        <input disabled md-input placeholder="Type" [(ngModel)]="creditCards[0].maskedNumber">
+        <input disabled md-input placeholder="Number" [(ngModel)]="creditCards[0].maskedNumber">
       </md-input-container>
       <md-input-container [class.small]="ripped">
         <input disabled md-input placeholder="Expiration" [(ngModel)]="creditCards[0].expirationFormatted">
